--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,12 @@
         <main class="container">
             <div class="messages"></div>
         </main>
+      
 
         <script type="module" src="./scripts/main.js"></script>
+        <script>
+            
+        </script>
     </body>
 </html>
 
